# TreadmillIO

./: .gitignore  README.md  Teensy-Long.brd  pyproject.toml  setup.cfg  setup.py
ClientSide/: .gitignore  AuditoryVR.py  Experiment.py  GenerateTrialIntervals.py  GenericInterface.py  GenericInterfaceUDP.py  README.md  RenderStateMachine.py  RewardZone.py  RunExperiment.py  SerialInterface.py  SoundStimulus.py  TaskStateMachine.py  VisualStimulusExperiment.py  VisualStimulusServer.py  alsa_output.py  defaults.yaml  latency_test.yaml  moana.yaml  refactor_testing.yaml  test-ni-socket.py  zmqclient.py
ClientSide/Documentation/: 00-teensy.rules  Audio.md  CompressingVideo.md  Examining Latency.ipynb  INSTALL.md  SyringePump.md  SyringeSizes.csv
ClientSide/ExampleConfigFiles/: camera_test.yaml  circle_maze_sound.yaml  gige_camera_test.yaml  james.yaml  james_train_2.yaml  latency_test.yaml  latency_test_with_cameras.yaml  linear_track.yaml  many_network_test.yaml  maze_and_state_unit_test.yaml  moana.yaml  moana_three_condition_test.yaml  multinetwork_switching_sounds.yaml  network_sound_unit_test.yaml  operant_example.yaml  operant_example_240cm_-8dB.yaml  operant_example_240cm_multilap_-14.yaml  operant_example_240cm_multilap_-8.yaml  sibo.yaml  simple_linear_track.yaml  sounds_unit_test.yaml  sounds_unit_test_NI.yaml  state_machine.yaml  state_machine_sounds.yaml  state_machine_sounds_unit_test.yaml  teleport_classical_example.yaml  testio.yaml  vr_example.yaml  vr_example_with_multilap.yaml
ClientSide/Sounds/: CompareSineWaveAndToneCloudVolume.ipynb  GenerateAllSineWaves.ipynb  GenerateAudio.ipynb  GenerateInterestingStimuli.ipynb  GenerateModulatedStimuli.ipynb  GenerateModulation.ipynb  GenerateToneCloud.ipynb  GenerateToneCloud.py
ClientSide/Testing/: CalibratePump.py  Demo.py  PatchRewardTimes.ipynb  SoundSync.ipynb  TestExperiment.py  TestGLFW.py  TestViewer.py
ClientSide/network_sound_server/: .gitignore  alsainterface.py  networksound.py  soundstimulus.py
ClientSide/treadmillio/: __init__.py  alsainterface.py  alsaplayback.py  networksoundplayback.py  rendertrack.py  rewardzone.py  serialinterface.py  soundstimulus.py  taskstatemachine.py  viewer.py  zeromq_alsacontrol.py
Documentation/: Examining Recorded Audio Timestamps.ipynb  Examining Smoothing.ipynb
Documentation/ExampleConfigFiles/: sibo.yaml  simple_linear_track.yaml  teleport_classical_example_nosound.yaml  vr_reward_zone_audio.yaml  vr_state_machine_exampe.yaml
Documentation/Installation/: INSTALL.md
Documentation/Testing/: Auditory_VR_Data_Analysis.ipynb  Demo.py  PatchTesting.ipynb  RunPump.py  TestSoundControl.py
Firmware/MSP430Firmware/: Makefile  README.md  TreadmillDataStruct.h  main.c  quadrature.c  quadrature.h  uart.c  uart.h
Firmware/TeensyFirmware/: TeensyFirmware.ino
Hardware/PCB/: Teensy-Long.sch  Teensy.brd  Teensy.sch
Software/: MultiScreenVisualServer.py  VisualStimulusServer.py  defaults.yaml
treadmillio/: __init__.py
(+136 files in other folders)
