[metadata]
name = TreadmillIO
author = Caleb Kemere
author_email = caleb.kemere@rice.edu
description = YAML Configured Python-based Experimental Control
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/kemerelab/treadmillio
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

